[package]
name = "carton"
version = "0.1.0"
edition = "2021"

[dependencies]
tuirealm = { version = "^1.9.0", default-features = false, features = [ "ratatui", "derive", "crossterm" ]}
tui-realm-stdlib = { version = "^1.3.0", default-features = false, features = [ "ratatui", "crossterm" ] }
clap = { version = "4.5.20", features = ["derive"] }
hcloud = "0.20.0"
futures = "0.3.31"
