[package]
name = "carton"
version = "0.1.0"
edition = "2021"

[dependencies]
tuirealm = { version = "^1.9.0", default-features = false, features = [ "ratatui", "derive", "crossterm" ]}
tui-realm-stdlib = { version = "^1.3.0", default-features = false, features = [ "ratatui", "crossterm" ] }
clap = { version = "4.5.20", features = ["derive"] }
hcloud = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.11.0", features = ["v4"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread"] }
